Back In Time

Version 0.8.18
* add sort columns in MainWindow:FileView
* fix German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)

Version 0.8.16
* add Drag & Drop from MainWindow:FileView/SnapshotsDialog to Nautilus
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)

Version 0.8.14
* add more command line parameters ( --version, --snapshots, --help )
* fix a crush for getting info on dead symbolic links
* when taking a new backup based on the previous one don't copy the previous extra info (ex: name)
* copy unsafe links when taking a snapshot

Version 0.8.12
* add German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* add SnapshotNameDialog
* add Name/Remove snapshot in main toolbar
* change the way it detects if the mainwindow is the ative window (no dialogs)
* toolbars: show icons only
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.10
* SnapshotsDialog: add right-click popup-menu and a toolbar with copy & restore buttons
* use a more robust backup lock file
* log using syslog
* fix a small bug in copy to clipboard
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.8
* SnapshotsDialog: add diff
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.6
* fix change backup path crush
* add SnapshotsDialog

Version 0.8.2
* add right-click menu in files list: open (using gnome-open), copy (you can paste in Nautilus), restore (for snapshots only)
* add Copy toolbar button for files list

Version 0.8.1
* add every 5/10 minutes automatic backup

Version 0.8
* don't show backup files (*~)
* add backup files to default exclude patterns (*~)
* makedeb.sh: make a single package with all languages included
* install.sh: install all languages
* add English manual (man)
* add English help (docbook)
* add help button in main toolbar