@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.8.18
+* update man/docbook
 * add sort columns in MainWindow:FileView
 * fix German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
 
